     too easy to hide blocking code. Replaced usage with the more explicit
     `com.twitter.util.Await.result(Future)`. ``RB_ID=833579``

   * util-core: Deprecated method `Future.get(Duration): Try` has been removed because it
     made it too easy to hide blocking code. Replaced usage with the more explicit
     `com.twitter.util.Await.result(Future.liftToTry)`. ``RB_ID=836066``

Bug Fixes:

    * util-zk: Fixed race when an existing permit is released between the time
      the list was gotten and the data was checked. ``RB_ID=835856``

6.34.0  2016-04-26

New Features:

  * util-core: Add `Throwables.unchecked` to help Java users deal with checked
    exceptions. ``RB_ID=811441``

  * util-stats: Can now get from a `com.twitter.finagle.stats.StatsReceiver`` to all "leaf"
    StatsReceivers that don't delegate to another StatsReceiver with
    `com.twitter.finagle.stats.DelegatingStatsReceiver.all`.  ``RB_ID=819519``

API Changes:

  * util-core: Removed deprecated methods from Buf.scala ``RB_ID=809948``
    - Removed `c.t.io.Buf.ByteArray.apply`, replace usage with `Buf.ByteArray.Owned.apply`.
    - Removed `c.t.io.Buf.ByteArray.unapply`, replace usage with `Buf.ByteArray.Owned.unapply`.
    - Removed `c.t.io.Buf.ByteBuffer.apply`, replace usage with `Buf.ByteBuffer.Owned.apply`.
    - Removed `c.t.io.Buf.toByteBuffer`, replace usage with `Buf.ByteBuffer.Owned.extract`.

  * util-core: Removed deprecated `Future.apply` methods ``RB_ID=811617``

  * util-stats: Removed `com.twitter.finagle.stats.BroadcastStatsReceiver` marker trait in favor of
    `com.twiter.finagle.stats.DelegatingStatsReceiver` marker trait, which lets us specify that we
    only delegate to a single `com.twitter.finagle.stats.StatsReceiver`.  ``RB_ID=819519``

  * util-zk-common: Removed `com.twitter.zk.ServerSet`. Use implementations of ServerSets in the
    finagle-serversets project. ``RB_ID=821355``

Bug Fixes:

  * util-core: Fix memory leak in `Var.apply(T, Event[T])` and `Var.patch`.