@@ -50,6 +50,12 @@ API Changes:
 
 Bug Fixes:
 
+    * util-core: AsyncMeter had a bug where if the burst size was smaller than
+      the number of disbursed tokens, it would discard all of the tokens over
+      the disbursal limit.  Changed to instead process tokens in the wait queue
+      with leftover tokens.  This improves behavior where the actual period is
+      smaller than can actually be simulated with the given timer.  ``RB_ID=836742``
+
     * util-zk: Fixed race when an existing permit is released between the time
       the list was gotten and the data was checked. ``RB_ID=835856``
 
